[gd_scene load_steps=2 format=2]

[ext_resource path="res://tester_app.gd" type="Script" id=1]

[node name="TesterApp" type="Node2D"]
script = ExtResource( 1 )

[node name="Truncate" type="Button" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 960.0
margin_bottom = 48.0
text = "Truncate DB !!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoAuth" type="Button" parent="."]
margin_left = 64.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 104.0
text = "no-auth test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthCreate" type="Button" parent="."]
margin_left = 64.0
margin_top = 120.0
margin_right = 224.0
margin_bottom = 144.0
text = "create w/ email/pwd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthEmailPwd" type="Button" parent="."]
margin_left = 64.0
margin_top = 160.0
margin_right = 224.0
margin_bottom = 184.0
text = "sign in email/pwd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthAnon" type="Button" parent="."]
margin_left = 64.0
margin_top = 200.0
margin_right = 224.0
margin_bottom = 224.0
text = "sign in anon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthReload" type="Button" parent="."]
margin_left = 64.0
margin_top = 304.0
margin_right = 224.0
margin_bottom = 328.0
text = "get/reload token"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthUpdateProfile" type="Button" parent="."]
margin_left = 64.0
margin_top = 352.0
margin_right = 224.0
margin_bottom = 376.0
text = "update profile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthUpdateEmail" type="Button" parent="."]
margin_left = 64.0
margin_top = 384.0
margin_right = 224.0
margin_bottom = 408.0
text = "update email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthUpdatePwd" type="Button" parent="."]
margin_left = 64.0
margin_top = 416.0
margin_right = 224.0
margin_bottom = 440.0
text = "update pwd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteTestUsers" type="Button" parent="."]
margin_left = 64.0
margin_top = 552.0
margin_right = 224.0
margin_bottom = 576.0
text = "delete test users"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoAuthWriteToLocked" type="Button" parent="."]
margin_left = 256.0
margin_top = 384.0
margin_right = 416.0
margin_bottom = 408.0
text = "no-auth write to locked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthWriteToLocked" type="Button" parent="."]
margin_left = 256.0
margin_top = 416.0
margin_right = 416.0
margin_bottom = 440.0
text = "auth write to locked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoAuthReadFromLocked" type="Button" parent="."]
margin_left = 256.0
margin_top = 448.0
margin_right = 416.0
margin_bottom = 472.0
text = "no-auth read of locked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathNotExist" type="Button" parent="."]
margin_left = 256.0
margin_top = 80.0
margin_right = 416.0
margin_bottom = 104.0
text = "path not exist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dict" type="Button" parent="."]
margin_left = 256.0
margin_top = 120.0
margin_right = 416.0
margin_bottom = 144.0
text = "dictionary 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dict2" type="Button" parent="."]
margin_left = 256.0
margin_top = 152.0
margin_right = 416.0
margin_bottom = 176.0
text = "dictionary 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dict3" type="Button" parent="."]
margin_left = 256.0
margin_top = 184.0
margin_right = 416.0
margin_bottom = 208.0
text = "dictionary 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="Button" parent="."]
margin_left = 256.0
margin_top = 224.0
margin_right = 416.0
margin_bottom = 248.0
text = "list"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timestamp" type="Button" parent="."]
margin_left = 256.0
margin_top = 264.0
margin_right = 416.0
margin_bottom = 288.0
text = "timestamp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Increment" type="Button" parent="."]
margin_left = 256.0
margin_top = 304.0
margin_right = 416.0
margin_bottom = 328.0
text = "increment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Array" type="Button" parent="."]
margin_left = 448.0
margin_top = 80.0
margin_right = 608.0
margin_bottom = 104.0
text = "array 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Array2" type="Button" parent="."]
margin_left = 448.0
margin_top = 112.0
margin_right = 608.0
margin_bottom = 136.0
text = "array 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Array3" type="Button" parent="."]
margin_left = 448.0
margin_top = 144.0
margin_right = 608.0
margin_bottom = 168.0
text = "DNU:  array 3: root"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Array4" type="Button" parent="."]
margin_left = 448.0
margin_top = 176.0
margin_right = 608.0
margin_bottom = 200.0
text = "array 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealEmail" type="LineEdit" parent="."]
margin_left = 752.0
margin_top = 80.0
margin_right = 960.0
margin_bottom = 104.0
max_length = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealEmailPwd" type="LineEdit" parent="."]
margin_left = 752.0
margin_top = 112.0
margin_right = 912.0
margin_bottom = 136.0
text = "supersecret"
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealCreate" type="Button" parent="."]
margin_left = 672.0
margin_top = 152.0
margin_right = 832.0
margin_bottom = 176.0
text = "create real email/pwd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealVerify" type="Button" parent="."]
margin_left = 672.0
margin_top = 192.0
margin_right = 832.0
margin_bottom = 216.0
text = "send verify email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealCheckUser" type="Button" parent="."]
margin_left = 672.0
margin_top = 232.0
margin_right = 832.0
margin_bottom = 256.0
text = "check user"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealUpdateEmail" type="Button" parent="."]
margin_left = 672.0
margin_top = 272.0
margin_right = 832.0
margin_bottom = 296.0
text = "update to fake email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealVerifyBeforeUpdate" type="Button" parent="."]
margin_left = 672.0
margin_top = 312.0
margin_right = 960.0
margin_bottom = 336.0
text = "send verify-before-update to real email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealSignIn" type="Button" parent="."]
margin_left = 672.0
margin_top = 352.0
margin_right = 832.0
margin_bottom = 376.0
text = "sign in real"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealResetPwd" type="Button" parent="."]
margin_left = 672.0
margin_top = 392.0
margin_right = 832.0
margin_bottom = 416.0
text = "reset password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealDelete" type="Button" parent="."]
margin_left = 672.0
margin_top = 552.0
margin_right = 832.0
margin_bottom = 576.0
text = "delete real email user"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 672.0
margin_top = 80.0
margin_right = 752.0
margin_bottom = 104.0
text = "Real email"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 672.0
margin_top = 112.0
margin_right = 752.0
margin_bottom = 136.0
text = "Password"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Truncate" to="." method="_on_Truncate_pressed"]
[connection signal="pressed" from="NoAuth" to="." method="_on_NoAuth_pressed"]
[connection signal="pressed" from="AuthCreate" to="." method="_on_AuthCreate_pressed"]
[connection signal="pressed" from="AuthEmailPwd" to="." method="_on_AuthEmailPwd_pressed"]
[connection signal="pressed" from="AuthAnon" to="." method="_on_AuthAnon_pressed"]
[connection signal="pressed" from="AuthReload" to="." method="_on_AuthReload_pressed"]
[connection signal="pressed" from="AuthUpdateProfile" to="." method="_on_AuthUpdateProfile_pressed"]
[connection signal="pressed" from="AuthUpdateEmail" to="." method="_on_AuthUpdateEmail_pressed"]
[connection signal="pressed" from="AuthUpdatePwd" to="." method="_on_AuthUpdatePwd_pressed"]
[connection signal="pressed" from="DeleteTestUsers" to="." method="_on_DeleteTestUsers_pressed"]
[connection signal="pressed" from="NoAuthWriteToLocked" to="." method="_on_NoAuthWriteToLocked_pressed"]
[connection signal="pressed" from="AuthWriteToLocked" to="." method="_on_AuthWriteToLocked_pressed"]
[connection signal="pressed" from="NoAuthReadFromLocked" to="." method="_on_NoAuthReadFromLocked_pressed"]
[connection signal="pressed" from="PathNotExist" to="." method="_on_PathNotExist_pressed"]
[connection signal="pressed" from="Dict" to="." method="_on_Dict_pressed"]
[connection signal="pressed" from="Dict2" to="." method="_on_Dict2_pressed"]
[connection signal="pressed" from="Dict3" to="." method="_on_Dict3_pressed"]
[connection signal="pressed" from="List" to="." method="_on_List_pressed"]
[connection signal="pressed" from="Timestamp" to="." method="_on_Timestamp_pressed"]
[connection signal="pressed" from="Increment" to="." method="_on_Increment_pressed"]
[connection signal="pressed" from="Array" to="." method="_on_Array_pressed"]
[connection signal="pressed" from="Array2" to="." method="_on_Array2_pressed"]
[connection signal="pressed" from="Array3" to="." method="_on_Array3_pressed"]
[connection signal="pressed" from="Array4" to="." method="_on_Array4_pressed"]
[connection signal="pressed" from="RealCreate" to="." method="_on_RealCreate_pressed"]
[connection signal="pressed" from="RealVerify" to="." method="_on_RealVerify_pressed"]
[connection signal="pressed" from="RealCheckUser" to="." method="_on_RealCheckUser_pressed"]
[connection signal="pressed" from="RealUpdateEmail" to="." method="_on_RealUpdateEmail_pressed"]
[connection signal="pressed" from="RealVerifyBeforeUpdate" to="." method="_on_RealVerifyBeforeUpdate_pressed"]
[connection signal="pressed" from="RealSignIn" to="." method="_on_RealSignIn_pressed"]
[connection signal="pressed" from="RealResetPwd" to="." method="_on_RealResetPwd_pressed"]
[connection signal="pressed" from="RealDelete" to="." method="_on_RealDelete_pressed"]
